--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,3 +20,4 @@ jobs:
       with:
         # docker-compose file to build and publish images from
         docker_compose: docker-compose.yml
+        repo_token: "${{ secrets.DOCKER_HUB_TOKEN }}"
