--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,3 +25,13 @@ jobs:
         
     - name: Docker Compose push to Docker Hub
       run: docker-compose push
+      
+    - name: Beanstalk Deploy
+      uses: einaregilsson/beanstalk-deploy@v20
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        region: us-east-1
+        application_name: BestMovies-SEP6
+        environment_name: best-movies-env
+        version_label: 1.0.0
