--- a/BestMovies.Net/.gitignore
+++ b/BestMovies.Net/.gitignore
@@ -31,6 +31,9 @@ Latest commit 491040e on Jan 26
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# My custom ignored files
+**/appsettings.Development.json
+
 # User-specific files
 *.rsuser
 *.suo
