--- a/BestMovies.Net/BestMovies.Api/appsettings.Production.json
+++ b/BestMovies.Net/BestMovies.Api/appsettings.Production.json
@@ -6,7 +6,7 @@
       }
     },
     "ConnectionStrings": {
-      "MoviesDatabase": "${{ secrets.DbConnection }}"
+      "MoviesDatabase": "Data Source=best-movies-database.cssawtdmxmne.eu-central-1.rds.amazonaws.com;Initial Catalog=BestMovies;User ID = best-movies-user; Password = Vecicka;"
     }
   }
   
