--- a/best-movies-web/Dockerfile
+++ b/best-movies-web/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:16.4.2 AS build
+EXPOSE 8080
 LABEL name=best-movies-web
 
 WORKDIR /app
@@ -10,4 +11,5 @@ COPY . ./
 RUN npm run build
 
 FROM nginx
+EXPOSE 8080
 COPY --from=build /app/public /usr/share/nginx/html
