--- a/BestMovies.Net/BestMovies.Api/Dockerfile
+++ b/BestMovies.Net/BestMovies.Api/Dockerfile
@@ -3,6 +3,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 LABEL name=best-movies-api
 WORKDIR /app
+EXPOSE 5000
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
