--- a/BestMovies.Net/BestMovies.Api/Properties/launchSettings.json
+++ b/BestMovies.Net/BestMovies.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "BestMovies.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/movies",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
