--- a/best-movies-web/package.json
+++ b/best-movies-web/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-loading-spinners": "^0.1.7",
     "svelte-search": "^2.0.0",
     "svelte-spa-router": "^3.2.0"
   },
