--- a/best-movies-web/package.json
+++ b/best-movies-web/package.json
@@ -19,7 +19,8 @@
     "svelte": "^3.0.0",
     "svelte-loading-spinners": "^0.1.7",
     "svelte-search": "^2.0.0",
-    "svelte-spa-router": "^3.2.0"
+    "svelte-spa-router": "^3.2.0",
+    "sveltestrap": "^5.9.0"
   },
   "dependencies": {
     "sirv-cli": "^2.0.0"
