--- a/BestMovies.Net/BestMovies.Api/appsettings.json
+++ b/BestMovies.Net/BestMovies.Api/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtKey": "AbecedaBestMoviesTokeniskoTyKokotisko"
+  "JwtKey": "AbecedaBestMoviesTokeniskoTyKokotisko",
+  "TmdbKey": "?api_key=16a9a121d1b3806d8592fb31eed063ff",
+  "ImageUrlPath": "https://image.tmdb.org/t/p/original/"
 }
