--- a/BestMovies.Net/BestMovies.Api/BestMovies.Api.csproj
+++ b/BestMovies.Net/BestMovies.Api/BestMovies.Api.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Integrations\NewFolder\**" />
+    <Content Remove="Integrations\NewFolder\**" />
+    <EmbeddedResource Remove="Integrations\NewFolder\**" />
+    <None Remove="Integrations\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
