--- a/BestMovies.Net/BestMovies.Api/appsettings.json
+++ b/BestMovies.Net/BestMovies.Api/appsettings.json
@@ -8,5 +8,5 @@
   "AllowedHosts": "*",
   "JwtKey": "AbecedaBestMoviesTokeniskoTyKokotisko",
   "TmdbKey": "?api_key=16a9a121d1b3806d8592fb31eed063ff",
-  "ImageUrlPath": "https://image.tmdb.org/t/p/original/"
+  "ImageUrlPath": "https://image.tmdb.org/t/p/original"
 }
