--- a/best-movies-web/package.json
+++ b/best-movies-web/package.json
@@ -23,6 +23,7 @@
     "sveltestrap": "^5.9.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-inview": "^3.0.0"
   }
 }
